@@ -1,5 +1,9 @@
 2019-01-30  Jay Berkenbilt  <ejb@ql.org>
 
+	* Do not include space after ID operator in inline image data. The
+	token now correctly contains the image data, the EI operator,
+	and the delimiter that precedes the EI operator.
+
 	* Improve locating of an inline image's EI operator to correctly
 	handle the case of EI appearing inside the image data.
 
